--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "openshift-ansible"]
 	path = openshift-ansible
-	url = git@github.com:openshift/openshift-ansible.git
+	url = https://github.com/openshift/openshift-ansible.git
 	branch = release-3.6
